fix(icon-list): vertical spacing

--- a/express/blocks/icon-list/icon-list.css
+++ b/express/blocks/icon-list/icon-list.css
@@ -70,7 +70,7 @@ main .section-wrapper.icon-list-two-column-container h2 {
 
 main .icon-list.two-column {
   margin: 0;
-  margin-top: 120px;
+  margin-top: 40px;
   padding: 0;  
 }
 
@@ -112,6 +112,7 @@ main .icon-list .icon-list-heading .icon-list-image img, main .icon-list .icon-l
 
 main .icon-list .icon-list-regular {
   min-height: 152px;
+  margin-top: 80px;
   margin-bottom: 0;
 }
 
